--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,12 +14,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
         include:
+          # --- x64 builds ---
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            artifact_name: ytapilegacy-linux-x64
+
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            artifact_name: ytapilegacy-windows-x64
+
+          # --- x32 builds ---
+          - os: ubuntu-latest
+            target: i686-unknown-linux-gnu
+            artifact_name: ytapilegacy-linux-x32
+
+          - os: windows-latest
+            target: i686-pc-windows-msvc
+            artifact_name: ytapilegacy-windows-x32
 
     steps:
       - uses: actions/checkout@v4
@@ -33,5 +45,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: myapp-${{ matrix.target }}
+          name: ${{ matrix.artifact_name }}
           path: target/${{ matrix.target }}/release/
