--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,14 +16,14 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: i686-unknown-linux-gnu
-            artifact_name: ytapilegacy-linux-x86
-            bin_path: target/i686-unknown-linux-gnu/release/ytapilegacy
+            target: x86_64-unknown-linux-gnu
+            artifact_name: ytapilegacy-linux-x64
+            bin_path: target/x86_64-unknown-linux-gnu/release/ytapilegacy
 
           - os: windows-latest
-            target: i686-pc-windows-msvc
-            artifact_name: ytapilegacy-windows-x86
-            bin_path: target/i686-pc-windows-msvc/release/ytapilegacy.exe
+            target: x86_64-pc-windows-msvc
+            artifact_name: ytapilegacy-windows-x64
+            bin_path: target/x86_64-pc-windows-msvc/release/ytapilegacy.exe
 
     steps:
       - uses: actions/checkout@v4
