--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,23 +16,21 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
             artifact_name: ytapilegacy-linux-x64
-            bin_path: target/x86_64-unknown-linux-gnu/release/ytapilegacy
+            bin_path: target/release/ytapilegacy
 
           - os: windows-latest
-            target: x86_64-pc-windows-msvc
             artifact_name: ytapilegacy-windows-x64
-            bin_path: target/x86_64-pc-windows-msvc/release/ytapilegacy.exe
+            bin_path: target/release/ytapilegacy.exe
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust target
-        run: rustup target add ${{ matrix.target }}
+      - name: Install Rust
+        run: rustup update stable
 
       - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
+        run: cargo build --release
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
