--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ base64 = "0.21"
 urlencoding = "2.1"
 uuid = { version = "1.0", features = ["v4"] }
 html-escape = "0.2"
+lru = "0.12"
+lazy_static = "1.4"
