--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Rust CI
 
 on:
   push:
@@ -11,27 +11,35 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Install Rust target
-        run: rustup target add ${{ matrix.target }}
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
 
-      - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
+    - name: Build
+      run: cargo build --release
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: myapp-${{ matrix.target }}
-          path: target/${{ matrix.target }}/release/
+    - name: Package artifact
+      run: |
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          powershell Compress-Archive -Path target\release\yt-api-legacy.exe -DestinationPath yt-api-legacy-windows.zip
+        else
+          tar -czf yt-api-legacy-linux.tar.gz -C target/release yt-api-legacy
+        fi
+
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: yt-api-legacy-${{ matrix.os }}
+        path: |
+          yt-api-legacy-windows.zip
+          yt-api-legacy-linux.tar.gz
