--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-files = "0.6"
 actix-session = { version = "0.7", features = ["cookie-session"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 config = "0.13"
