add related video struct

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,13 +28,27 @@ jobs:
     - name: Build
       run: cargo build --release
 
+    - name: Prepare additional files
+      shell: bash
+      run: |
+        mkdir -p build-output
+        cp config.yml.example build-output/
+        cp -r assets build-output/
+        find build-output/assets -name "*.exe" -type f -delete
+
     - name: Package artifact
       shell: bash
       run: |
         if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          7z a yt-api-legacy-windows.zip target/release/yt-api-legacy.exe
+          mkdir -p temp-package
+          cp target/release/yt-api-legacy.exe temp-package/
+          cp -r build-output/* temp-package/
+          7z a yt-api-legacy-windows.zip temp-package/*
         else
-          tar -czf yt-api-legacy-linux.tar.gz -C target/release yt-api-legacy
+          mkdir -p temp-package
+          cp target/release/yt-api-legacy temp-package/
+          cp -r build-output/* temp-package/
+          tar -czf yt-api-legacy-linux.tar.gz -C temp-package .
         fi
 
     - name: Upload build artifact
