forgot to upload this lol

--- a/config.yml.example
+++ b/config.yml.example
@@ -1,34 +1,18 @@
 server:
-  # server port
   port: 2823
-  
-  # main instance (soon to be removed)
-  mainurl: "http://localhost:2823/"
-
-  # secret key for the application
-  secretkey: "YOUR_SECRET_KEY"
-
-  # frontend URL
-  frontend_url: "http://localhost:3000"
+  mainurl: "http://localhost:2823/" #main url of the server
+  secretkey: "test" # secret key for encrypting and decrypting
+  frontend_url: "http://localhost:3000" # soon will be removed
 
 api:
-  # yt api keys
   api_keys:
-    - "YOUR_YOUTUBE_API_KEY_1"
-    - "YOUR_YOUTUBE_API_KEY_2"
-  
-  # oauth config
-  oauth_client_id: "YOUR_OAUTH_CLIENT_ID"
-  oauth_client_secret: "YOUR_OAUTH_CLIENT_SECRET"
-  
-  # request timeout in seconds
+    - "add api keys here which you like to use"
+  oauth_client_id: "" # google oauth client id - go to https://console.developers.google.com/apis/credentials
+  oauth_client_secret: "" # google oauth client secret - go to https://console.developers.google.com/apis/credentials
   request_timeout: 30
 
 video:
-  # default video quality
   default_quality: "360"
-
-  # available video qualities
   available_qualities:
     - "144"
     - "240"
@@ -38,32 +22,21 @@ video:
     - "1080"
     - "1440"
     - "2160"
-  
-  # video source - direct or proxy
   video_source: "direct"
-  
-  # use cookies for requests
   use_cookies: true
-  
-  # default count for search results
   default_count: 50
 
 proxy:
-  # enable thumbnail proxy
   use_thumbnail_proxy: true
-  
-  # enable channel thumbnail proxy
   use_channel_thumbnail_proxy: false
-  
-  # enable video proxy
   use_video_proxy: true
-  
-  # fetch channel thumbnails
   fetch_channel_thumbnails: false
 
 cache:
-  # temporary folder maximum size in MB
   temp_folder_max_size_mb: 5120
-  
-  # cache cleanup threshold in MB
   cache_cleanup_threshold_mb: 100
+
+instants:
+  - url: "https://yt.legacyprojects.ru"
+  - url: "https://yt.medyleprojects.ru"
+  - url: "https://ytcloud.meetlook.ru"
